added DataFrame code

--- a/First .NET Notebook.ipynb
+++ b/First .NET Notebook.ipynb
@@ -70,6 +70,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "samples from https://devblogs.microsoft.com/dotnet/an-introduction-to-dataframe/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -99,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +132,266 @@
    ],
    "source": [
     "display(ints);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>&lt;null&gt;</td></tr><tr><td>1</td><td>&lt;null&gt;</td></tr><tr><td>2</td><td>&lt;null&gt;</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dateTimes.Append(DateTime.Parse(\"2019/01/01\"));\n",
+    "dateTimes.Append(DateTime.Parse(\"2019/01/02\"));\n",
+    "dateTimes.Append(DateTime.Parse(\"2019/01/03\"));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>Date</th><th>Day</th><th>DayOfWeek</th><th>DayOfYear</th><th>Hour</th><th>Kind</th><th>Millisecond</th><th>Minute</th><th>Month</th><th>Second</th><th>Ticks</th><th>TimeOfDay</th><th>Year</th></tr></thead><tbody><tr><td>0</td><td>2019-01-01 00:00:00Z</td><td>1</td><td>Tuesday</td><td>1</td><td>0</td><td>Unspecified</td><td>0</td><td>0</td><td>1</td><td>0</td><td>636818976000000000</td><td>00:00:00</td><td>2019</td></tr><tr><td>1</td><td>2019-01-02 00:00:00Z</td><td>2</td><td>Wednesday</td><td>2</td><td>0</td><td>Unspecified</td><td>0</td><td>0</td><td>1</td><td>0</td><td>636819840000000000</td><td>00:00:00</td><td>2019</td></tr><tr><td>2</td><td>2019-01-03 00:00:00Z</td><td>3</td><td>Thursday</td><td>3</td><td>0</td><td>Unspecified</td><td>0</td><td>0</td><td>1</td><td>0</td><td>636820704000000000</td><td>00:00:00</td><td>2019</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dateTimes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DataFrame df = new DataFrame(dateTimes, ints, strings); // This will throw if the columns are of different lengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>Columns</th><th>Rows</th></tr></thead><tbody><tr><td>[ [ 2019-01-01 00:00:00Z, 2019-01-02 00:00:00Z, 2019-01-03 00:00:00Z ], [ &lt;null&gt;, &lt;null&gt;, &lt;null&gt; ], [ &lt;null&gt;, &lt;null&gt;, &lt;null&gt; ] ]</td><td>[ [ 2019-01-01 00:00:00Z, &lt;null&gt;, &lt;null&gt; ], [ 2019-01-02 00:00:00Z, &lt;null&gt;, &lt;null&gt; ], [ 2019-01-03 00:00:00Z, &lt;null&gt;, &lt;null&gt; ] ]</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Microsoft.AspNetCore.Html;\n",
+    "Formatter<DataFrame>.Register((df, writer) =>\n",
+    "{\n",
+    "    var headers = new List<IHtmlContent>();\n",
+    "    headers.Add(th(i(\"index\")));\n",
+    "    headers.AddRange(df.Columns.Select(c => (IHtmlContent) th(c.Name)));\n",
+    "    var rows = new List<List<IHtmlContent>>();\n",
+    "    var take = 20;\n",
+    "    for (var i = 0; i < Math.Min(take, df.Rows.Count); i++)\n",
+    "    {\n",
+    "        var cells = new List<IHtmlContent>();\n",
+    "        cells.Add(td(i));\n",
+    "        foreach (var obj in df.Rows[i])\n",
+    "        {\n",
+    "            cells.Add(td(obj));\n",
+    "        }\n",
+    "        rows.Add(cells);\n",
+    "    }\n",
+    "\n",
+    "    var t = table(\n",
+    "        thead(\n",
+    "            headers),\n",
+    "        tbody(\n",
+    "            rows.Select(\n",
+    "                r => tr(r))));\n",
+    "\n",
+    "    writer.Write(t);\n",
+    "}, \"text/html\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><th><i>index</i></th><th>DateTimes</th><th>Ints</th><th>Strings</th></thead><tbody><tr><td>0</td><td>2019-01-01 00:00:00Z</td><td>&lt;null&gt;</td><td>&lt;null&gt;</td></tr><tr><td>1</td><td>2019-01-02 00:00:00Z</td><td>&lt;null&gt;</td><td>&lt;null&gt;</td></tr><tr><td>2</td><td>2019-01-03 00:00:00Z</td><td>&lt;null&gt;</td><td>&lt;null&gt;</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><th><i>index</i></th><th>DateTimes</th><th>Ints</th><th>Strings</th></thead><tbody><tr><td>0</td><td>2019-01-01 00:00:00Z</td><td>10</td><td>&lt;null&gt;</td></tr><tr><td>1</td><td>2019-01-02 00:00:00Z</td><td>&lt;null&gt;</td><td>&lt;null&gt;</td></tr><tr><td>2</td><td>2019-01-03 00:00:00Z</td><td>&lt;null&gt;</td><td>&lt;null&gt;</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// change a value directly via df\n",
+    "df[0, 1] = 10; // 0 is the rowIndex, and 1 is the columnIndex. This sets the 0th value in the Ints columns to 10\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><th><i>index</i></th><th>DateTimes</th><th>Ints</th><th>Strings</th></thead><tbody><tr><td>0</td><td>2019-01-01 00:00:00Z</td><td>10</td><td>&lt;null&gt;</td></tr><tr><td>1</td><td>2019-01-02 00:00:00Z</td><td>100</td><td>Foo!</td></tr><tr><td>2</td><td>2019-01-03 00:00:00Z</td><td>&lt;null&gt;</td><td>&lt;null&gt;</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Modify ints and strings columns by indexing\n",
+    "ints[1] = 100;\n",
+    "strings[1] = \"Foo!\";\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><th><i>index</i></th><th>Info</th><th>DateTimes</th><th>Ints</th><th>Strings</th></thead><tbody><tr><td>0</td><td>DataType</td><td>System.DateTime</td><td>System.Int32</td><td>System.String</td></tr><tr><td>1</td><td>Length (excluding null values)</td><td>3</td><td>2</td><td>3</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Add 5 to Ints through the DataFrame\n",
+    "df.Columns[\"Ints\"].Add(5, inPlace: true);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>15</td></tr><tr><td>1</td><td>105</td></tr><tr><td>2</td><td>&lt;null&gt;</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Columns[\"Ints\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.Columns[\"Ints\"] = (ints/5) * 100;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>300</td></tr><tr><td>1</td><td>2100</td></tr><tr><td>2</td><td>&lt;null&gt;</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Columns[\"Ints\"]"
    ]
   },
   {
