--- a/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 3.ipynb
+++ b/Data Science From Scratch with C#/Data Science From Scratch C# - Chapter 3.ipynb
@@ -62,13 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div id=\"4a791505-accf-4331-861d-64ecccd26141\" style=\"width: 900px; height: 500px;\"></div>\r\n",
+       "<div id=\"980ddc89-c63a-4a8c-852e-5c1abbd92944\" style=\"width: 700px; height: 500px;\"></div>\r\n",
        "<script type=\"text/javascript\">\r\n",
        "\r\n",
        "var renderPlotly = function() {\r\n",
@@ -76,8 +76,8 @@
        "    xplotRequire(['plotly'], function(Plotly) {\r\n",
        "\n",
        "            var data = [{\"type\":\"scatter\",\"x\":[1950,1960,1970,1980,1990,2000,2010],\"y\":[300.2,543.3,1075.9,2862.5,5979.6,10289.7,14958.3],\"name\":\"Nominal GDP\"}];\n",
-       "            var layout = \"\";\n",
-       "            Plotly.newPlot('4a791505-accf-4331-861d-64ecccd26141', data, layout);\n",
+       "            var layout = {\"title\":\"Nominal GDP\",\"xaxis\":{\"title\":\"Years\",\"_isSubplotObj\":true},\"yaxis\":{\"title\":\"Billions of $\",\"_isSubplotObj\":true}};\n",
+       "            Plotly.newPlot('980ddc89-c63a-4a8c-852e-5c1abbd92944', data, layout);\n",
        "        \r\n",
        "});\r\n",
        "};\r\n",
@@ -106,7 +106,65 @@
     "    y = gdp\n",
     "};\n",
     "var chart = Chart.Plot(new[] {gdpSeries});\n",
+    "chart.WithTitle(gdpSeries.name);\n",
+    "chart.WithWidth(700);\n",
+    "chart.WithHeight(500);\n",
+    "chart.WithXTitle(\"Years\");\n",
+    "chart.WithYTitle(\"Billions of $\");\n",
     "display(chart);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"bb5f376d-65cb-4847-8b22-f5f7c75949ce\" style=\"width: 700px; height: 500px;\"></div>\r\n",
+       "<script type=\"text/javascript\">\r\n",
+       "\r\n",
+       "var renderPlotly = function() {\r\n",
+       "    var xplotRequire = requirejs.config({context:'xplot-3.0.1',paths:{plotly:'https://cdn.plot.ly/plotly-1.49.2.min'}});\r\n",
+       "    xplotRequire(['plotly'], function(Plotly) {\r\n",
+       "\n",
+       "            var data = [{\"type\":\"bar\",\"x\":[\"Annie Hall\",\"Ben-Hur\",\"Casablanca\",\"Gandhi\",\"West Side Story\"],\"y\":[5,11,3,8,10]}];\n",
+       "            var layout = {\"title\":\"My Favorite Movies\"};\n",
+       "            Plotly.newPlot('bb5f376d-65cb-4847-8b22-f5f7c75949ce', data, layout);\n",
+       "        \r\n",
+       "});\r\n",
+       "};\r\n",
+       "if ((typeof(requirejs) !==  typeof(Function)) || (typeof(requirejs.config) !== typeof(Function))) { \r\n",
+       "    var script = document.createElement(\"script\"); \r\n",
+       "    script.setAttribute(\"src\", \"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js\"); \r\n",
+       "    script.onload = function(){\r\n",
+       "        renderPlotly();\r\n",
+       "    };\r\n",
+       "    document.getElementsByTagName(\"head\")[0].appendChild(script); \r\n",
+       "}\r\n",
+       "else {\r\n",
+       "    renderPlotly();\r\n",
+       "}\r\n",
+       "</script>\r\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "var movies = new List<string>() {\"Annie Hall\", \"Ben-Hur\", \"Casablanca\", \"Gandhi\", \"West Side Story\"};\n",
+    "var numOscars = new List<int>() {5, 11, 3, 8, 10};\n",
+    "var barSeries = new Graph.Bar() {\n",
+    "    x = movies,\n",
+    "    y = numOscars\n",
+    "};\n",
+    "var movieChart = Chart.Plot(new[] {barSeries});\n",
+    "movieChart.WithTitle(\"My Favorite Movies\");\n",
+    "movieChart.WithWidth(700);\n",
+    "movieChart.WithHeight(500);\n",
+    "display(movieChart);"
    ]
   },
   {
